.kubernetes/staging/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-portal-service
  namespace: app
spec:
  selector:
    app: client-portal
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
