.kubernetes/staging/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: client-portal-ingress
  namespace: app
spec:
  rules:
    - host: clientb.luwjistik.io
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: brain-service
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: client-portal-service
                port:
                  number: 80
